tests/compile-errors/ce-error-compat.valk

error Err1 (err, err2)
error Err2 (err3)

fn f1() !Err1 {
    f2()
}
fn f2() !Err2 {
    throw .err3
}
fn main() {
    f1() _
}